--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/pdf2doc.jpg" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
       charset="UTF-8″"
     />
-    <title>Vite + React + TS</title>
+    <title>
+      Convierte tu pdf a Chatgpt en segundos y compártelo o incrusta en tu web
+    </title>
   </head>
   <body>
     <div id="root"></div>
