--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
-      charset="UTF-8″"
+      charset="UTF-8"
     />
+
     <title>
       Convierte tu pdf a Chatgpt en segundos y compártelo o incrusta en tu web
     </title>
